# server/config/swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "MyContacts API",
     "version": "1.0.0",
-    "description": "API de gestion des utilisateurs avec authentification JWT"
+    "description": "API de gestion des utilisateurs et des contacts avec authentification JWT"
   },
   "servers": [
     {
@@ -42,12 +42,8 @@
           }
         },
         "responses": {
-          "200": {
-            "description": "Utilisateur créé avec succès"
-          },
-          "400": {
-            "description": "Utilisateur déjà existant ou champs manquants"
-          }
+          "201": { "description": "Utilisateur créé avec succès" },
+          "400": { "description": "Utilisateur déjà existant ou champs manquants" }
         }
       }
     },
@@ -91,7 +87,7 @@
     },
     "/users": {
       "get": {
-        "summary": "Récupère la liste des utilisateurs (protégé)",
+        "summary": "Récupérer la liste des utilisateurs",
         "tags": ["Utilisateurs"],
         "security": [{ "bearerAuth": [] }],
         "responses": {
@@ -120,7 +116,7 @@
     },
     "/contacts": {
       "get": {
-        "summary": "Récupérer tous les contacts",
+        "summary": "Récupérer tous les contacts de l'utilisateur connecté",
         "tags": ["Contacts"],
         "security": [{ "bearerAuth": [] }],
         "responses": {
@@ -147,7 +143,7 @@
         }
       },
       "post": {
-        "summary": "Créer un nouveau contact",
+        "summary": "Créer un nouveau contact pour l'utilisateur connecté",
         "tags": ["Contacts"],
         "security": [{ "bearerAuth": [] }],
         "requestBody": {
@@ -167,14 +163,14 @@
           }
         },
         "responses": {
-          "200": { "description": "Contact créé avec succès" },
+          "201": { "description": "Contact créé avec succès" },
           "400": { "description": "Tous les champs requis ou contact déjà existant" }
         }
       }
     },
     "/contacts/{id}": {
       "patch": {
-        "summary": "Modifier un contact",
+        "summary": "Modifier un contact de l'utilisateur connecté",
         "tags": ["Contacts"],
         "security": [{ "bearerAuth": [] }],
         "parameters": [
@@ -195,12 +191,12 @@
           }
         },
         "responses": {
-          "201": { "description": "Contact modifié avec succès" },
+          "200": { "description": "Contact modifié avec succès" },
           "404": { "description": "Contact non trouvé" }
         }
       },
       "delete": {
-        "summary": "Supprimer un contact",
+        "summary": "Supprimer un contact de l'utilisateur connecté",
         "tags": ["Contacts"],
         "security": [{ "bearerAuth": [] }],
         "parameters": [
@@ -213,7 +209,7 @@
           }
         ],
         "responses": {
-          "201": { "description": "Contact supprimé avec succès" },
+          "200": { "description": "Contact supprimé avec succès" },
           "404": { "description": "Contact non trouvé" }
         }
       }
